Bug 1161721 - Return false from document.queryCommandSupported for restricted commands. r=ehsan